      module name is now required)
    - replace a file with a symlink also if there's a matching one in
      pyshared directory already
    - add support for DH_OPTIONS env. variable
  * pycompile:
    - --exclude now works with private dirs
    - use /usr/bin/pythonX.Y rather than pythonX.Y (to avoid /usr/local
      interpreters)
    

 -- Piotr Ożarowski <piotr@debian.org>  Sat, 15 Jan 2011 21:14:38 +0100

python-defaults (2.6.6-10) experimental; urgency=low

  * dh_python2: fix moving files from old debug locations (due to typo)
  * python-minimal now Breaks python-support << 1.0.12 (Python 2.7 support was
    added in 1.0.12)
  * pycompile: skip dangling symlinks

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 10 Jan 2011 23:05:47 +0100

python-defaults (2.6.6-9) experimental; urgency=low

  * dh_python2: fix a crash in packages with private extension (closes: 607555)
    - test3 added (to test architecture dependent packages)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 19 Dec 2010 20:27:23 +0100

python-defaults (2.6.6-8) experimental; urgency=low

  * Fix typo in minimum required python version for packages generated with
    dh_python2

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 19 Dec 2010 14:57:58 +0100

python-defaults (2.6.6-7) experimental; urgency=high

  * pycompile:
    - Don't over-optimize, check the timestamps of byte-code files.
    - Add options -f/--force, -O.
    - Copy stdout/stderr of py_compile processes in case of error.
    - Propagate the exit value of the py_compile processes.
    - Update manual page.
  * Bump depends to require the fixed pycompile for dh_python2 based package
    builds.
  * Don't touch the standard python library in rtupdate scripts.

 -- Matthias Klose <doko@debian.org>  Sun, 12 Dec 2010 17:46:13 +0100

python-defaults (2.6.6-6) experimental; urgency=low

  * dh_python2:
    - make the error message about missing extension more clear
      (and more verbose in --verbose mode)