@@ -1,64 +1,0 @@
-.TH DH_PYTHON2 "1" "August 2010" "dh_python2 2.0~beta1" "User Commands"
-.SH NAME
-dh_python2 \- calculates Python dependencies, adds maintainer scripts to byte compile files, etc.
-.SH SYNOPSIS
-.B dh_python2
-\fI-p PACKAGE \fR[\fI-V \fR[\fIX.Y\fR][\fI-\fR][\fIA.B\fR]] \fIDIR_OR_FILE \fR[\fI-X REGEXPR\fR]
-.SH OPTIONS
-.TP
-\fB\-\-version\fR
-show program's version number and exit
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-show this help message and exit
-.TP
-\fB\-\-no\-guessing\-versions\fR
-disable guessing other supported Python versions
-.TP
-\fB\-\-no\-guessing\-deps\fR
-disable guessing dependencies
-.TP
-\fB\-\-skip\-private\fR
-don't check private directories
-.TP
-\fB\-v\fR, \fB\-\-verbose\fR
-turn verbose mode on
-.TP
-\fB\-i\fR, \fB\-\-indep\fR
-act on architecture independent packages
-.TP
-\fB\-a\fR, \fB\-\-arch\fR
-act on architecture dependent packages
-.TP
-\fB\-q\fR, \fB\-\-quiet\fR
-be quiet
-.TP
-\fB\-p\fR PACKAGE, \fB\-\-package\fR=\fIPACKAGE\fR
-act on the package named PACKAGE
-.TP
-\fB\-N\fR NO_PACKAGE, \fB\-\-no\-package\fR=\fINO_PACKAGE\fR
-do not act on the specified package
-.TP
-\fB\-V\fR VRANGE
-specify list of supported Python versions. See
-pycompile(1) for examples
-.TP
-\fB\-X\fR REGEXPR, \fB\-\-exclude\fR=\fIREGEXPR\fR
-exclude items that match given REGEXPR. You may use
-this option multiple times to build up a list of things
-to exclude.
-.TP
-\fB\-\-depends\fR=\fIDEPENDS\fR
-translate given requirements into Debian dependencies
-and add them to ${python:Depends}. Use it for missing
-items in requires.txt.
-.TP
-\fB\-\-recommends\fR=\fIRECOMMENDS\fR
-translate given requirements into Debian dependencies
-and add them to ${python:Recommends}
-.TP
-\fB\-\-suggests\fR=\fISUGGESTS\fR
-translate given requirements into Debian dependencies
-and add them to ${python:Suggests}
-.SH "SEE ALSO"
-/usr/share/doc/python-doc/README.PyDist (python-doc package)
