@@ -1,22 +1,0 @@
-.TH PYCLEAN "1" "August 2010" "pyclean 0.9" "User Commands"
-.SH NAME
-pyclean \- removes .pyc and .pyo files
-.SH SYNOPSIS
-.B pyclean
-[\fI-p PACKAGE | DIR_OR_FILE\fR]
-.SH OPTIONS
-.TP
-\fB\-\-version\fR
-show program's version number and exit
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-show this help message and exit
-.TP
-\fB\-v\fR, \fB\-\-verbose\fR
-turn verbose more one
-.TP
-\fB\-q\fR, \fB\-\-quiet\fR
-be quiet
-.TP
-\fB\-p\fR PACKAGE, \fB\-\-package\fR=\fIPACKAGE\fR
-specify Debian package name to clean
