@@ -1,51 +1,0 @@
-.TH PYCOMPILE "1" "August 2010" "pycompile 0.9" "User Commands"
-.SH NAME
-pycompile \- byte compile Python source files
-.SH SYNOPSIS
-.B pycompile
-[\fI-V \fR[\fIX.Y\fR][\fI-\fR][\fIA.B\fR]] \fIDIR_OR_FILE \fR[\fI-X REGEXPR\fR]
-.P
-.B pycompile
-\fB\-p\fR PACKAGE
-.SH DESCRIPTION
-Wrapper around
-.B py_compile
-to byte-compile python files.
-.SH OPTIONS
-.TP
-\fB\-\-version\fR
-Show program's version number and exit.
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-Show this help message and exit
-.TP
-\fB\-f\fR, \fB\-\-force\fR
-Force rebuild of byte-code files even if timestamps are up-to-date.
-.TP
-\fB\-O\fR
-Byte-compile to .pyo files.
-.TP
-\fB\-q\fR, \fB\-\-quiet\fR
-Be quiet.
-.TP
-\fB\-v\fR, \fB\-\-verbose\fR
-Turn verbose mode on.
-.TP
-\fB\-p\fR PACKAGE, \fB\-\-package\fR=\fIPACKAGE\fR
-Specify Debian package name whose files should be
-bytecompiled.
-.TP
-\fB\-V\fR VRANGE
-Force private modules to be bytecompiled with Python
-version from given range, regardless of the default
-Python version in the system. If there are no other
-options, bytecompile all public modules for installed
-Python versions that match given range.  VERSION_RANGE
-examples: '2.5' (version 2.5 only), '2.5\-' (version
-2.5 or newer), '2.5\-2.7' (version 2.5 or 2.6), '\-3.0'
-(all supported 2.X versions).
-.TP
-\fB\-X\fR REGEXPR, \fB\-\-exclude\fR=\fIREGEXPR\fR
-exclude items that match given REGEXPR. You may use
-this option multiple times to build up a list of
-things to exclude.
