@@ -10,7 +10,8 @@ python-defaults (2.6.6-11) UNRELEASED; urgency=low
     - --exclude now works with private dirs
     - use /usr/bin/pythonX.Y rather than pythonX.Y (to avoid /usr/local
       interpreters)
-    
+  * rewrite dh_python2.1, pycompile.1 and pyclean.1 manpages in ReStructured
+    Text, add quick guide for maintainers to dh_python2 manpage
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat, 15 Jan 2011 21:14:38 +0100
 
